# stonefish-learning

./: README.md
falling_test/: .gitignore  CMakeLists.txt  FallingTestApp.cpp  FallingTestApp.h  FallingTestManager.cpp  FallingTestManager.h  main.cpp
stonefish_ws/: .gitignore
stonefish_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
stonefish_ws/install/bluerov2_control/lib/bluerov2_control/: odom2tf
stonefish_ws/install/bluerov2_control/share/bluerov2_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
stonefish_ws/install/bluerov2_sim/share/bluerov2_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
stonefish_ws/install/stonefish_ros2/lib/stonefish_ros2/: stonefish_simulator  stonefish_simulator_nogpu
stonefish_ws/install/stonefish_ros2/share/stonefish_ros2/: local_setup.sh  package.sh
stonefish_ws/log/: latest_build
stonefish_ws/src/BLUEROV2/bluerov2_sim/: package.xml
stonefish_ws/src/BLUEROV2/bluerov2_sim/cfg/: bluerov2_rviz.rviz
stonefish_ws/src/BLUEROV2/bluerov2_sim/scenarios/: wind_farm.scn
stonefish_ws/src/bluerov2_control/: package.xml  setup.py
stonefish_ws/src/bluerov2_control/bluerov2_control/: odom2tf.py
stonefish_ws/src/bluerov2_sim/: CMakeLists.txt  package.xml
stonefish_ws/src/bluerov2_sim/launch/: bluerov2_sim.launch.py
stonefish_ws/src/bluerov2_sim/scenarios/: bluerov2.scn
stonefish_ws/src/bluerov2_sim/urdf/: bluerov2.urdf.xacro
underwater_test/: .gitignore  CMakeLists.txt  UnderwaterTestManager.cpp
(+12 files in other folders)
